# asyncweb

./: CMakeLists.txt
include/private/: common.h  http.h  tls.h  tools.h  ws.h
include/private/sock/: future_socket.h  pal_socket.h  stream.h
include/private/sync/: network.h  websocket.h
include/public/: asyncweb.h
src/: common.c  http.c  tools.c  ws.c
src/sock/: future_socket.c  stream.c
src/sock/pal_socket/: posix.c  win.c
src/sync/network/: common.c  posix.c  win32.c
src/sync/websocket/: none.c  posix.c  win32.c
src/tls/: openssl.c
tests/: main.c  test_async_http.c  test_async_ws.c  test_http.c  test_sync_http.c  test_sync_ws.c
